Added test for Activity to be show Over Lock Screen of device

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/finger_print_title" />
+
+    <Button
+        android:onClick="onExtrasTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/extras_title" />
 </LinearLayout>
